--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,11 +15,11 @@ init:
 - cmd: set PATH=%PY_DIR%;%PY_DIR%\Scripts;%PATH%
 
 install:
-  - pip install pylibftdi"
-  - pip install pyinstaller"
+  - pip install pylibftdi
+  - pip install pyinstaller
 
 build_script:
-  - python -m PyInstaller --onefile --clean flash.py"
+  - python -m PyInstaller --onefile --clean flash.py
 
 artifacts:
   - path: dist\*
