--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,6 +15,7 @@ init:
 - cmd: set PATH=%PY_DIR%;%PY_DIR%\Scripts;%PATH%
 
 install:
+  - sh: sudo apt-get install -y python3-dev
   - pip install pylibftdi
   - pip install pyinstaller
 
