--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,6 +28,7 @@ artifacts:
 deploy:
 
   provider: GitHub
+  release: HondaECU-$(APPVEYOR_REPO_TAG_NAME)
   description: 'Honda ECU K-line commandline tool'
   auth_token:
     secure: VDADKxNk9UEQ11Ycj0bjwqi5yzJKuKOZ+qAWu5vfPqSQTeJDiCoqWSuCLYK1o2pC
