--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,31 +1,30 @@
 image:
 - Visual Studio 2017
-- Ubuntu
-
-stack: python 3.6
 
 environment:
-  PY_DIR: C:\Python36
-
-platform: x86
+  matrix:
+    - MSYS2_ARCH: i686
+      MSYSTEM: MINGW32
 
 build: off
 
 init:
-- cmd: set PATH=%PY_DIR%;%PY_DIR%\Scripts;%PATH%
+- cmd: set PATH=C:\msys64\%MSYSTEM%\bin;C:\msys64\usr\bin;%PATH%
 
 install:
-  - sh: wget -q -O /tmp/libpng12.deb http://mirrors.kernel.org/ubuntu/pool/main/libp/libpng/libpng12-0_1.2.54-1ubuntu1_amd64.deb && sudo dpkg -i /tmp/libpng12.deb && rm /tmp/libpng12.deb
-  - sh: sudo apt-get install -y libpython3.6-dev libftdi1 libftdi1-dev
-  - sh: pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-16.04 wxPython
-  - cmd: pip install wxPython
-  - pip install libusb1
-  - pip install pylibftdi
-  - pip install pyinstaller
+  - cmd: bash -lc "pacman --noconfirm --sync --refresh --refresh pacman"
+  - cmd: bash -lc "pacman --noconfirm --sync --refresh --refresh --sysupgrade --sysupgrade"
+  - cmd: bash -xlc "pacman --noconfirm -S --needed base-devel"
+  - cmd: bash -xlc "pacman --noconfirm -S --needed mingw-w64-libusb"
+  - cmd: bash -xlc "pacman --noconfirm -S --needed mingw-w64-wxPython"
+  - cmd: bash -xlc "pacman --noconfirm -S --needed mingw-w64-%MSYS2_ARCH%-python3"
+  - cmd: bash -xlc "pip install libusb1"
+  - cmd: bash -xlc "pip install pylibftdi"
+  - cmd: bash -xlc "pip install pyinstaller"
 
 build_script:
-  - python -m PyInstaller --onefile --clean HondaECU.py
-  - python -m PyInstaller --onefile --clean gui.py
+  - cmd: bash -xlc "python3 -m PyInstaller --onefile --clean HondaECU.py"
+  - cmd: bash -xlc "python3 -m PyInstaller --onefile --clean gui.py"
 
 artifacts:
   - path: dist\*
