--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,14 +18,17 @@ install:
   - sh: wget -q -O /tmp/libpng12.deb http://mirrors.kernel.org/ubuntu/pool/main/libp/libpng/libpng12-0_1.2.54-1ubuntu1_amd64.deb && dpkg -i /tmp/libpng12.deb && rm /tmp/libpng12.deb
   - sh: sudo apt-get install -y libpython3.6-dev libftdi1 libftdi1-dev
   - sh: pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-16.04 wxPython
+  - ps: Start-FileDownload 'https://github.com/libusb/libusb/releases/download/v1.0.22/libusb-1.0.22.7z'
+  - cmd: 7z e libusb-1.0.22.7z
+  - ps: ls -lah
   - cmd: pip install wxPython
   - pip install libusb1
   - pip install pylibftdi
   - pip install pyinstaller
 
 build_script:
-  - python -m PyInstaller --onefile --clean HondaECU.py
-  - python -m PyInstaller --onefile --clean gui.py
+  - cmd: python -m PyInstaller --onefile --clean HondaECU.py
+  - cmd: python -m PyInstaller --onefile --clean --add-data MS32/dll/libusb-1.0.dll gui.py
 
 artifacts:
   - path: dist\*
