--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,7 +19,7 @@ install:
   - sh: sudo apt-get install -y libpython3.6-dev libftdi1 libftdi1-dev
   - sh: pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-16.04 wxPython
   - ps: Start-FileDownload 'https://github.com/libusb/libusb/releases/download/v1.0.22/libusb-1.0.22.7z'
-  - cmd: 7z e libusb-1.0.22.7z
+  - cmd: 7z x libusb-1.0.22.7z
   - ps: ls -lah
   - cmd: pip install wxPython
   - pip install libusb1
