--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,7 +27,7 @@ install:
 
 build_script:
   - cmd: python -m PyInstaller --onefile --clean ecu.py --name HondaECU_old
-  - cmd: python -m PyInstaller --onefile --clean --add-data honda.ico;. --add-data MS32/dll/libusb-1.0.dll;. gui.py --name HondaECU --icon=honda.ico
+  - cmd: python -m PyInstaller --onefile --clean --add-binary honda.ico;. --add-binary waitoff.gif;. --add-binary waiton.gif;. --add-binary MS32/dll/libusb-1.0.dll;. gui.py --name HondaECU --icon=honda.ico
 
 artifacts:
   - path: dist\*
