--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -31,7 +31,7 @@ install:
 
 build_script:
   - cmd: python -m PyInstaller --onefile --clean ecu.py --name HondaECU_old
-  matrix:
+  - matrix:
     - cmd: python -m PyInstaller --onefile --clean --add-binary honda.ico;. --add-binary waitoff.gif;. --add-binary waiton.gif;. --add-binary MS32/dll/libusb-1.0.dll;. --add-binary libftdi1-1.4git_devkit_x86_x64_14June2018/bin32/libftdi1.dll;. gui.py --name HondaECU_x86 --icon=honda.ico
     - cmd: python -m PyInstaller --onefile --clean --add-binary honda.ico;. --add-binary waitoff.gif;. --add-binary waiton.gif;. --add-binary MS64/dll/libusb-1.0.dll;. --add-binary libftdi1-1.4git_devkit_x86_x64_14June2018/bin64/libftdi1.dll;. gui.py --name HondaECU_x64 --icon=honda.ico
 
