--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -5,16 +5,17 @@ image:
 stack: python 3.6
 
 environment:
-  PY_DIR: C:\Python36
   matrix:
     - platform: x86
       LIBUSB: "MS32/dll/libusb-1.0.dll"
       LIBFTDI: "libftdi1-1.4git_devkit_x86_x64_14June2018/bin32/libftdi1.dll"
       SUFFIX: "x86"
+      PY_DIR: C:\Python36
     - platform: x64
       LIBUSB: "MS64/dll/libusb-1.0.dll"
       LIBFTDI: "libftdi1-1.4git_devkit_x86_x64_14June2018/bin64/libftdi1.dll"
       SUFFIX: "x64"
+      PY_DIR: C:\Python36-x86
 
 build: off
 
