--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,7 +26,7 @@ install:
   - cmd: '%PYTHON_HOME%\Scripts\pip install pywin32 pylibftdi pydispatcher wxPython pyinstaller requests'
 
 build_script:
-  - cmd: '%PYTHON_HOME%\python -m PyInstaller --onefile --clean --noconsole --add-binary pngs/controlpanel/*;pngs/controlpanel --add-binary %LIBFTDI%;. controlpanel.py --name HondaECU --icon=images/honda.ico'
+  - cmd: '%PYTHON_HOME%\python -m PyInstaller --onefile --clean --noconsole --add-binary pngs/*;pngs --add-binary %LIBFTDI%;. controlpanel.py --name HondaECU --icon=images/honda.ico'
   - cmd: '%PYTHON_HOME%\python -m PyInstaller --onefile --clean --add-binary %LIBFTDI%;. log.py --name log --icon=images/honda.ico'
 
 artifacts:
