--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,8 +26,8 @@ install:
   - cmd: '%PYTHON_HOME%\Scripts\pip install pywin32 pylibftdi pydispatcher wxPython pyinstaller requests'
 
 build_script:
-  - cmd: '%PYTHON_HOME%\python -m PyInstaller --onefile --clean --noconsole --add-binary images/*.ico;images --add-binary pngs/*;pngs --add-binary %LIBFTDI%;. controlpanel.py --name HondaECU --icon=images/honda.ico'
-  - cmd: '%PYTHON_HOME%\python -m PyInstaller --onefile --clean --add-binary %LIBFTDI%;. log.py --name log --icon=images/honda.ico'
+  - cmd: '%PYTHON_HOME%\python -m PyInstaller --onefile --clean --noconsole --add-binary honda.ico;. --add-binary pngs/*;pngs --add-binary %LIBFTDI%;. controlpanel.py --name HondaECU --icon=honda.ico'
+  - cmd: '%PYTHON_HOME%\python -m PyInstaller --onefile --clean --add-binary %LIBFTDI%;. log.py --name log --icon=honda.ico'
 
 artifacts:
   - path: dist\*
