--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,7 +23,8 @@ build: off
 install:
   - ps: Invoke-WebRequest -Uri 'https://sourceforge.net/projects/picusb/files/libftdi1-1.4git_devkit_x86_x64_14June2018.zip' -OutFile libftdi1-1.4git_devkit_x86_x64_14June2018.zip -UserAgent [Microsoft.PowerShell.Commands.PSUserAgent]::Chrome
   - cmd: 7z x libftdi1-1.4git_devkit_x86_x64_14June2018.zip
-  - cmd: '%PYTHON_HOME%\Scripts\pip install pywin32 pylibftdi pydispatcher wxPython pyinstaller requests'
+  - cmd: '%PYTHON_HOME%\Scripts\pip install -r requirements-dev.txt'
+  - cmd: '%PYTHON_HOME%\Scripts\pip install -r requirements.txt'
 
 build_script:
   - cmd: '%PYTHON_HOME%\python -m PyInstaller --onefile --clean --noconsole --add-binary honda.ico;. --add-binary pngs/*;pngs --add-binary %LIBFTDI%;. controlpanel.py --name HondaECU --icon=honda.ico'
