--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,7 +27,7 @@ install:
   - cmd: '%PYTHON_HOME%\Scripts\pip install -r requirements.txt'
 
 build_script:
-  - cmd: '%PYTHON_HOME%\python -m PyInstaller --onefile --clean --add-binary honda.ico;. --add-binary pngs/*;pngs --add-binary %LIBFTDI%;. --hidden-import numpy controlpanel.py --name HondaECU --icon=honda.ico'
+  - cmd: '%PYTHON_HOME%\python -m PyInstaller --onefile --clean --add-binary honda.ico;. --add-binary pngs/*;pngs --add-binary %LIBFTDI%;. --hidden-import numpy.core._dtype_ctypes controlpanel.py --name HondaECU --icon=honda.ico'
   - cmd: '%PYTHON_HOME%\python -m PyInstaller --onefile --clean --add-binary %LIBFTDI%;. log.py --name log --icon=honda.ico'
 
 artifacts:
