--- a/eeprom.conf
+++ b/eeprom.conf
@@ -1,9 +1,9 @@
 vendor_id=0x0403
 product_id=0x6001
 max_power=0
-manufacturer="PTM Engineering"
+manufacturer="MCU Innovations"
 product="K-Line Adapter 3.0"
-serial="PTME0009"
+serial="MCUI0009"
 self_powered=true
 remote_wakeup=false
 use_serial=true
