include ftdi drivers for windows

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,8 +21,7 @@ environment:
 build: off
 
 install:
-  - ps: Invoke-WebRequest -Uri 'https://sourceforge.net/projects/picusb/files/libftdi1-1.4git_devkit_x86_x64_14June2018.zip' -OutFile libftdi1-1.4git_devkit_x86_x64_14June2018.zip -UserAgent [Microsoft.PowerShell.Commands.PSUserAgent]::Chrome
-  - cmd: 7z x libftdi1-1.4git_devkit_x86_x64_14June2018.zip
+  - cmd: 7z x drivers\libftdi1-1.4git_devkit_x86_x64_14June2018.zip
   - cmd: '%PYTHON_HOME%\Scripts\pip install -r requirements-dev.txt'
   - cmd: '%PYTHON_HOME%\Scripts\pip install -r requirements.txt'
 
