--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,9 +26,7 @@ install:
   - cmd: '%PYTHON_HOME%\Scripts\pip install -r requirements.txt'
 
 build_script:
-  - cmd: 'echo __VERSION__ = \"`git describe --tags`\" > src/version.py'
-  - cmd: '%PYTHON_HOME%\python -m PyInstaller --noconsole --onefile --clean --add-binary src/version.py;src --add-binary src/images/honda.ico;. --add-binary bins;bins --add-binary xdfs;xdfs --add-binary src/images/*;images --add-binary %LIBFTDI%;. src/__main__.py --name HondaECU_`git describe --tags` --icon=src/images/honda.ico'
-  # - cmd: '%PYTHON_HOME%\python -m PyInstaller --onefile --clean --add-binary %LIBFTDI%;. log.py --name log --icon=honda.ico'
+  - ps: build.ps1
 
 artifacts:
   - path: dist\*
