--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,9 +27,9 @@ install:
 
 build_script:
   - ps: >-
-      $env:HONDAECU_VERSION=git describe --tags
+      $env:HONDAECU_VERSION = &"git describe --tags" | Out-String
       Write-Host "__VERSION__ = "$HONDAECU_VERSION | Out-File -FilePath src/version.py
-      $env:PYTHON_HOME\python -m PyInstaller --noconsole --onefile --clean --add-binary src/version.py;src --add-binary src/images/honda.ico;. --add-binary bins;bins --add-binary xdfs;xdfs --add-binary src/images/*;images --add-binary %LIBFTDI%;. src/__main__.py --name HondaECU_$env:HONDAECU_VERSION --icon=src/images/honda.ico
+      $env:PYTHON_HOME"\python -m PyInstaller --noconsole --onefile --clean --add-binary src/version.py;src --add-binary src/images/honda.ico;. --add-binary bins;bins --add-binary xdfs;xdfs --add-binary src/images/*;images --add-binary %LIBFTDI%;. src/__main__.py --name HondaECU_$env:HONDAECU_VERSION --icon=src/images/honda.ico"
 artifacts:
   - path: dist\*
 
