--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,8 +22,8 @@ build: off
 
 install:
   - cmd: 7z x drivers\libftdi1-1.4git_devkit_x86_x64_14June2018.zip
-  - cmd: '%PYTHON_HOME%\Scripts\pip install -r requirements-dev.txt'
-  - cmd: '%PYTHON_HOME%\Scripts\pip install -r requirements.txt'
+  - cmd: '%PYTHON_HOME%\Scripts\pip install -r requirements-dev.txt --user'
+  - cmd: '%PYTHON_HOME%\Scripts\pip install -r requirements.txt --user'
 
 build_script:
   - cmd: '%PYTHON_HOME%\python misc\prebuild.py'
