--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -29,6 +29,7 @@ build_script:
   - cmd: '%PYTHON_HOME%\python misc\prebuild.py'
   - cmd: '%PYTHON_HOME%\python -m PyInstaller --noconsole --onefile --clean --add-binary src/images/honda.ico;. --add-binary bins;bins --add-binary xdfs;xdfs --add-binary src/images/*;images --add-binary %LIBFTDI%;. src/__main__.py --name HondaECU --icon=src/images/honda.ico'
   - cmd: '%PYTHON_HOME%\python -m PyInstaller --noconsole --onefile --clean --add-binary src/images/honda.ico;. --add-binary bins;bins --add-binary xdfs;xdfs --add-binary src/images/*;images --add-binary %LIBFTDI%;. src/__motoamerica__.py --name HondaECU_MAspec --icon=src/images/honda.ico'
+  - cmd: '%PYTHON_HOME%\python -m PyInstaller --onefile --clean --add-binary src/images/honda.ico;. --add-binary bins;bins --add-binary xdfs;xdfs --add-binary src/images/*;images --add-binary %LIBFTDI%;. log.py --name HondaLogger --icon=src/images/honda.ico'
   - cmd: '%PYTHON_HOME%\python misc\postbuild.py'
 
 artifacts:
