--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,7 +13,6 @@ cache:
 environment:
   matrix:
     - platform: x86
-      LIBFTDI: "libftdi1-1.4git_devkit_x86_x64_14June2018/bin32/*.dll"
       LIBUSB: "libusb-1.0.22/MS32/dll/*.dll"
       PYTHON_HOME: C:\Python37
       PYTHON_VERSION: '3.7'
@@ -22,14 +21,13 @@ environment:
 build: off
 
 install:
-  # - cmd: 7z x drivers\libftdi1-1.4git_devkit_x86_x64_14June2018.zip
   - cmd: 7z x drivers\libusb-1.0.22.7z
   - cmd: '%PYTHON_HOME%\Scripts\pip install -r requirements-dev.txt --user'
   - cmd: '%PYTHON_HOME%\Scripts\pip install -r requirements.txt --user'
 
 build_script:
   - cmd: '%PYTHON_HOME%\python misc\prebuild.py'
-  - cmd: '%PYTHON_HOME%\python -m PyInstaller --noconsole --onefile --clean --add-binary src/images/honda.ico;. --add-binary src/images/*;images --add-binary %LIBFTDI%;. src/__main__.py --name HondaECU --icon=src/images/honda.ico'
+  - cmd: '%PYTHON_HOME%\python -m PyInstaller --noconsole --onefile --clean --add-binary src/images/honda.ico;. --add-binary src/images/*;images --add-binary %LIBUSB%;. src/__main__.py --name HondaECU --icon=src/images/honda.ico'
   - cmd: '%PYTHON_HOME%\python misc\postbuild.py'
 
 artifacts:
