--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,7 +13,7 @@ cache:
 environment:
   matrix:
     - platform: x86
-      LIBUSB: "libusb-1.0.22/MS32/dll/*.dll"
+      LIBUSB: "libusb-1.0.22/MS32/dll/libusb-1.0.dll"
       PYTHON_HOME: C:\Python37
       PYTHON_VERSION: '3.7'
       PYTHON_ARCH: '32'
