--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,7 +13,7 @@ cache:
 environment:
   matrix:
     - platform: x86
-      LIBUSB: "libusb-1.0.22/MS32/dll/libusb-1.0.dll"
+      LIBUSB: "MS32/dll/libusb-1.0.dll"
       PYTHON_HOME: C:\Python37
       PYTHON_VERSION: '3.7'
       PYTHON_ARCH: '32'
@@ -22,8 +22,6 @@ build: off
 
 install:
   - cmd: 7z x drivers\libusb-1.0.22.7z
-  - ps: ls
-  - ps: ls drivers
   - cmd: '%PYTHON_HOME%\Scripts\pip install -r requirements-dev.txt --user'
   - cmd: '%PYTHON_HOME%\Scripts\pip install -r requirements.txt --user'
 
