--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pywin32; sys_platform == 'win32'
 git+https://github.com/minkustree/pyusb
-pyftdi
+git+https://github.com/MCU-Innovations/pyftdi
 pydispatcher
 wxPython
 requests
@@ -9,4 +9,4 @@ numpy==1.15.4
 colour
 pyparsing
 gitpython
-git+https://github.com/MCU-Innovations/eculib.git#egg=eculib>=1.0.23
+git+https://github.com/MCU-Innovations/eculib.git#egg=eculib>=1.0.24
