--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,7 +27,7 @@ install:
 
 build_script:
   - cmd: '%PYTHON_HOME%\python misc\prebuild.py'
-  - cmd: '%PYTHON_HOME%\python -m PyInstaller --onefile --clean --add-binary src/images/honda.ico;. --add-binary src/images/*;images --add-binary %LIBUSB%;. src/__main__.py --name HondaECU --icon=src/images/honda.ico'
+  - cmd: '%PYTHON_HOME%\python -m PyInstaller --noconsole --onefile --clean --add-binary src/images/honda.ico;. --add-binary src/images/*;images --add-binary %LIBUSB%;. src/__main__.py --name HondaECU --icon=src/images/honda.ico'
   - cmd: '%PYTHON_HOME%\python misc\postbuild.py'
 
 artifacts:
